--- a/app/loading.html
+++ b/app/loading.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>MetaMask Loading</title>
+  <title>ClearCoin Loading</title>
   <style>
     #div-logo {
       position: absolute;
